--- a/src-capacitor/ios/App/App/Base.lproj/Main.storyboard
+++ b/src-capacitor/ios/App/App/Base.lproj/Main.storyboard
@@ -27,7 +27,23 @@
                     <view key="view" contentMode="scaleToFill" id="GiE-Sc-rRb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mfe-ce-Fle">
+                                <rect key="frame" x="16" y="666" width="343" height="1"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="6Tp-WZ-Wf6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="hLw-GR-qTC" firstAttribute="top" secondItem="Mfe-ce-Fle" secondAttribute="bottom" id="KKm-Ic-SFe"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Mfe-ce-Fle" secondAttribute="trailing" id="PaF-JE-qVz"/>
+                            <constraint firstItem="Mfe-ce-Fle" firstAttribute="leading" secondItem="GiE-Sc-rRb" secondAttribute="leadingMargin" id="QRl-d5-9MY"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pl4-Jq-IcW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
